--- a/sass/module/_career.scss
+++ b/sass/module/_career.scss
@@ -8,6 +8,7 @@
 
   @include mq('sp') {
     font-size: 1.8rem;
+    text-align: center;
   }
 }
 
@@ -34,6 +35,7 @@
   @include mq('sp') {
     margin-bottom: 0;
     font-size: 1.4rem;
+    flex-direction: column;
   }
 }
 
@@ -41,14 +43,15 @@
   margin-right: 8px;
 
   @include mq('sp') {
-    width: 20%;
-    margin-right: 0;
+    width: 100%;
+    margin: 0 0 4px 0;
   }
 }
 
 .career-list__item-name {
   @include mq('sp') {
-    width: 80%;
+    width: 100%;
+    margin-bottom: 4px;
   }
 }
 
