--- a/sass/module/_skill.scss
+++ b/sass/module/_skill.scss
@@ -2,8 +2,13 @@
 }
 
 .skill__ttl {
-  font-size: 2.4em;
-  margin: 24px 0 32px 0;
+  font-size: 2.4rem;
+  margin-bottom: 32px;
+
+  @include mq('sp') {
+    font-size: 1.8rem;
+    text-align: center;
+  }
 }
 
 .skill-list {
