--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ section {
 
 .biz-hour__ttl {
   font-size: 2.4rem;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
 }
 
 @media screen and (max-width: 767px) {
@@ -371,7 +371,14 @@ section {
 
 .contact__txt {
   font-size: 1.4rem;
-  margin-top: 16px;
+  margin: 4px 0 0 8px;
+}
+
+@media screen and (max-width: 767px) {
+  .contact__txt {
+    font-size: 1.2rem;
+    padding: 0 4px;
+  }
 }
 
 .footer {
@@ -655,18 +662,31 @@ section {
 }
 
 .price {
-  margin-bottom: 72px;
+  margin-bottom: 80px;
 }
 
 .price__ttl {
   font-size: 2.4rem;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
 }
 
 @media screen and (max-width: 767px) {
   .price__ttl {
     font-size: 1.8rem;
     text-align: center;
+  }
+}
+
+.price__txt, .biz-hour__txt {
+  font-size: 1.4rem;
+  margin: 4px 0 0 48px;
+}
+
+@media screen and (max-width: 767px) {
+  .price__txt, .biz-hour__txt {
+    font-size: 1.2rem;
+    margin-left: 0;
+    padding: 0 4px;
   }
 }
 
@@ -746,7 +766,7 @@ section {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
-  margin-bottom: 48px;
+  margin-bottom: 56px;
 }
 
 @media screen and (max-width: 767px) {
