--- a/sass/module/_biz-hour.scss
+++ b/sass/module/_biz-hour.scss
@@ -4,10 +4,14 @@
 
 .biz-hour__ttl {
   font-size: 2.4rem;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
 
   @include mq('sp') {
     font-size: 1.8rem;
     text-align: center;
   }
+}
+
+.biz-hour__txt {
+  @extend .price__txt;
 }
