--- a/sass/module/_contact.scss
+++ b/sass/module/_contact.scss
@@ -8,5 +8,10 @@
 
 .contact__txt {
   font-size: 1.4rem;
-  margin-top: 16px;
+  margin: 4px 0 0 8px;
+
+  @include mq('sp') {
+    font-size: 1.2rem;
+    padding: 0 4px;
+  }
 }
