--- a/sass/module/_sns.scss
+++ b/sass/module/_sns.scss
@@ -1,6 +1,11 @@
 .sns {
 }
 
+.sns--header {
+  text-align: center;
+  margin-top: 16px;
+}
+
 .sns__link {
   font-size: 2.4rem;
   margin-right: 16px;
