--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,6 +3,7 @@ body {
   // font-family: "Roboto", sans-serif;
   font-family: '游ゴシック体', YuGothic, '游ゴシック', 'Yu Gothic', 'メイリオ', 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', sans-serif;
   font-weight: 500;
+  color: $font-color;
 }
 
 h1 {
@@ -50,6 +51,7 @@ span {
 section {
   padding: 80px 0;
   border-bottom: 1px solid $base-color;
+  z-index: 10;
 
   @include mq('sp') {
     padding: 48px 0;
