--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -17,8 +17,8 @@ html {
 }
 
 body {
-  font-family: "Avenir", "Helvetica Neue", "Helvetica", "Arial", "Hiragino Sans", "ヒラギノ角ゴシック", YuGothic, "Yu Gothic", "メイリオ", Meiryo,
-    "ＭＳ Ｐゴシック", "MS PGothic";
+  font-family: 'Avenir', 'Helvetica Neue', 'Helvetica', 'Arial', 'Hiragino Sans', 'ヒラギノ角ゴシック', YuGothic, 'Yu Gothic', 'メイリオ', Meiryo,
+    'ＭＳ Ｐゴシック', 'MS PGothic';
   line-height: 1;
 }
 h1,
@@ -40,7 +40,8 @@ ul,
 ol,
 dl,
 li,
-figure {
+figure,
+blockquote {
   margin: 0;
   padding: 0;
   border: 0;
