--- a/sass/module/_table.scss
+++ b/sass/module/_table.scss
@@ -22,7 +22,13 @@
 }
 
 .table--biz-hour {
-  @extend .table--price;
+  width: calc(100% - 80px);
+  margin: 0 40px 0 40px;
+
+  @include mq('sp') {
+    width: 100%;
+    margin: 0;
+  }
 }
 
 .table__body {
