--- a/sass/module/_mv.scss
+++ b/sass/module/_mv.scss
@@ -30,19 +30,20 @@
     letter-spacing: 0.2rem;
     margin-bottom: 24px;
     text-align: left;
-    color: darken($base-color, 20%);
 
     @include mq('sp') {
-      font-size: 3.2em;
+      font-size: 3.2rem;
     }
 
     .typed-cursor {
       @extend .mv-ttl;
+      color: darken($base-color, 20%);
     }
   }
 
   .mv-ttl--typed {
     @extend .mv-ttl;
+    color: darken($base-color, 20%);
     font-style: normal;
   }
 
