--- a/sass/module/_form.scss
+++ b/sass/module/_form.scss
@@ -15,10 +15,15 @@
 
 .form__txt {
   @include text();
+  background-color: #eee;
   font-size: 1.6rem;
   width: 100%;
   padding: 4px 8px;
   transition: 0.1s ease-in-out;
+
+  @include mq('sp') {
+    font-size: 1.4rem;
+  }
 
   &:focus ~ .form__label {
     top: -16px;
@@ -42,24 +47,33 @@
   opacity: 0.6;
   transition: all 0.2s ease;
   pointer-events: none;
+
+  @include mq('sp') {
+    font-size: 1.4rem;
+  }
 }
 
 .form__btn {
   @include submit();
   font-size: 1.6rem;
   border-radius: 5px;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
+  // box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
   padding: 16px 24px;
   display: block;
   text-align: center;
   width: 100%;
-  background-color: $emp-color;
-  color: #fff;
+  background-color: #aaa;
+  // color: #fff;
   transition: 0.2s ease-in-out;
+  cursor: not-allowed;
 
-  &:hover {
-    transform: translateY(1px);
-    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
-    // opacity: 0.9;
+  @include mq('sp') {
+    font-size: 1.4rem;
   }
+
+  // &:hover {
+  //   transform: translateY(1px);
+  //   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
+  //   opacity: 0.9;
+  // }
 }
