--- a/sass/module/_works.scss
+++ b/sass/module/_works.scss
@@ -3,73 +3,78 @@
 
 .works-list {
   @include flex($align: stretch);
-  // background-color: red;
-}
 
-.works-list__item {
-  position: relative;
-  width: 33.333333%;
-  // background-color: #eee;
-  margin: 0 0 48px 0;
-  padding: 8px;
-
-  &:nth-child(3n) {
-    margin-right: 0;
+  .works-list__item {
+    width: calc(50% - 8px);
+    // background-color: #eee;
+    margin: 0 16px 48px 0;
 
     @include mq('sp') {
+      width: 100%;
+      margin-right: 0;
+    }
+
+    &:nth-child(2n) {
       margin-right: 0;
     }
   }
 
-  @include mq('sp') {
+  .works-list__img {
     width: 100%;
-    margin-right: 0;
+    height: 240px;
+    margin-bottom: 8px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
+
+    @include mq('sp') {
+      height: auto;
+    }
   }
-}
 
-.works-list__disc {
-  padding: 8px;
-}
+  .works-list__disc {
+    padding: 8px;
+  }
 
-.works-list__ttl {
-  margin-bottom: 16px;
-}
+  .works-list__ttl {
+    margin-bottom: 8px;
+    font-weight: 600;
+  }
 
-.works-list__txt {
-  font-size: 1.6em;
-  font-weight: 300;
-  margin-bottom: 8px;
-}
+  .works-list__txt--link {
+    color: $base-color;
+  }
 
-.works-list__img {
-  width: 100%;
-  height: 150px;
-  margin-bottom: 8px;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
-}
+  .works-list__git {
+    margin-left: 4px;
+    color: $base-color;
+  }
 
-.works-list__cat {
-  font-size: 1.4em;
-}
+  .works-list__txt {
+    height: 72px;
 
-.works-list__cat-txt {
-  color: $base-color;
-  font-size: inherit;
-  margin: 0 4px;
-}
-.works-list__link {
-  text-align: right;
-  padding-right: 16px;
-  margin-top: 48px;
-}
+    @include mq('sp') {
+      height: auto;
+    }
+  }
 
-.works-list__link-txt {
-  font-size: 1.4em;
-  padding-bottom: 2px;
+  .works-list__link {
+    text-align: right;
+    padding-right: 16px;
+    margin-top: 40px;
 
-  &:hover {
-    border-bottom: 1px solid #000;
-    opacity: 0.5;
+    @include mq('sp') {
+      text-align: left;
+      margin-top: 24px;
+    }
+  }
+
+  .works-list__link-txt {
+    font-size: 1.4em;
+    padding-bottom: 2px;
+
+    &:hover {
+      border-bottom: 1px solid #000;
+      opacity: 0.5;
+    }
   }
 }
 
